--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,167 @@
 
-/**************************
-Global Styles
-**************************/
+/************************
+ Global Styles
+ ***********************/
+html,
+body,
+header,
+.view {
+    height: 100%;
+	text-align: justify;
+    
+}
 body {
-    font-family: 'Montserrat', sans-serif;   
-    background: #AAFFA9; 
-    background: -webkit-linear-gradient(to left, #AAFFA9 , #11FFBD);
-    background: linear-gradient(to left, #AAFFA9 , #11FFBD);
-        
+    font-family: 'Montserrat',sans-serif;
+}
+.h3-projects {
+    font-weight: 700;
+    color: #E0245E;
 }
 
-/*******************
-Card Styles
-******************/
-.card {
+.h3-about {
+    font-weight: 700;
+    color: #24bce0;
+}
+.h1-responsive {
+    font-weight: 700;
+}
+
+.container-fluid {
+    padding-left: 0.5rem; 
+    padding-right: 0.5rem;
+    } 
+/************************
+Navigation
+***********************/
+.navbar {        
+background: #fff;
+ /* fallback for old browsers */
+/*background: -webkit-linear-gradient(to left, #00d2ff , #33fbf0); /* Chrome 10-25, Safari 5.1-6 */*/
+/*background: linear-gradient(to left, #00d2ff , #33fbf0);  W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        
+        }
+.navbar-brand {
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #0756A4 !important;      
+}
+.navbar-nav {
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    font-weight: 400;
+
+}
+.top-nav-collapse {
+    background-color: #fff;
+}
+
+
+.navbar .navbar-nav .nav-item a {
+	font-size: 0.9rem;
+}
+/************************
+ Full page Intro Styles
+ ***********************/
+
+header {
+background: #fafafa; /* fallback for old browsers */
+/*background: -webkit-linear-gradient(to left, #00d2ff , #33fbf0); /* Chrome 10-25, Safari 5.1-6 */*/
+/*background: linear-gradient(to left, #00d2ff , #33fbf0);  W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.lead {
+	color: #8E979A;
+    font-family: 'Roboto';
+	
+}
+@media (max-width: 768px) {
+    .full-bg-img,
+    .view {
+        height: auto;
+        position: relative;
+    }
+}
+
+.description {
+    padding-bottom: 3rem;
+    color: #424242;
+}
+
+@media (max-width: 992px) {
+    .description {
+	padding-top: 7rem;		
+        text-align: center;
+    }
+  
+}
+/************************
+Work
+***********************/
+#work p {
+color:	#6b7c93;
+}
+.card-title {
+	color: #404453;
+}
+.card-text {
+	color: #6b7c93;
+}
+/************************
+About
+***********************/
+.card { 
+    background-color: #fff; 
+    color: #6b7c93;
     box-shadow: 0 20px 20px rgba(0,0,0,.08);
     transition: all .25s cubic-bezier(.02,.01,.47,1);
 }
 .card:hover {
         box-shadow: 0 30px 30px rgba(0,0,0,.15);
 }
-.card-title {
- 
-    font-size: 1.25rem;
-    color: #0066cc;
+.about-heading {
+	color: #16C6C0;
+	font-weight: 700;
 }
-.card-text {
-    font-size: 1rem;
+.table td, .table th {
+    padding: .75rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    vertical-align: top;
+    border-top: 1px solid #eceeef;
 }
 
-/************************
-Background for control buttons
-************************/
-.play {
-    background-color: #27AE60;
+.education, .work-exp {
+    text-align: left; 
 }
-.reset {
-    background-color: #F1593A;
+.first-col {
+    padding-right: 0.75rem !important;
+}
+/***********************
+Responsive class
+***********************/
+@media (min-width: 544px) { 
+    .desc {
+        padding:0 2.5rem;
+        }
+    .edu {
+        padding:0 2.5rem;
+    }    
+}
+
+@media (min-width: 992px) 
+ { 
+    .desc {
+        padding-left: 5rem;
+        padding-right: 1rem;
+        }
+    .edu {
+        padding-right: 5rem;
+        padding-left: 1rem;
+    }     
 }
