--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@ header,
 	text-align: justify;
     
 }
+.view {
+            background: url("http://mdbootstrap.com/images/regular/city/img%20(17).jpg")no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
 body {
     font-family: 'Montserrat',sans-serif;
 }
